make some changes

--- a/django-store/core/templates/base/footer.html
+++ b/django-store/core/templates/base/footer.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% load static %}
+<div class="container-fluid" style="height: 380px;background-color: rgb(112, 112, 112);">
+      <div class="row h-100">
 
-</body>
-</html>
+            <div class="col-12 d-flex justify-content-around" style="background-color: rgb(112, 112, 112);">
+              <div class="col-3 sm-col-2 col-lg-1 p-3" style="border-radius: 100px;">
+                <img class="mx-auto" src="{% static 'img/esalat.jpg' %}" style="width: 100%;height: auto; border-radius: 100px;">
+                <div class="mt-2" style="font-size: 10px;text-align: center;color: white;">اصالت کالا</div>
+              </div>
+              <div class="col-3 sm-col-2 col-lg-1 p-3" style="border-radius: 100px;">
+                <img class="mx-auto" src="{% static 'img/24hrs2.jpeg' %}" style="width: 100%;height: auto; border-radius: 100px;">
+                <div class="mt-2" style="font-size: 10px;text-align: center;color: white;">پشتیبانی ۲۴ ساعته</div>
+              </div>
+              <div class="col-3 sm-col-2 col-lg-1 p-3" style="border-radius: 100px;">
+                <img class="mx-auto" src="{% static 'img/money_back.png' %}" style="width: 100%;height: auto; border-radius: 100px;">
+                <div class="mt-2" style="font-size: 10px;text-align: center;color: white;">ضمانت بازگشت وجه</div>
+              </div>
+              <div class="col-3 sm-col-2 col-lg-1 p-3" style="border-radius: 100px;">
+                <img class="mx-auto" src="{% static 'img/pay5.png' %}" style="width: 100%;height: auto; border-radius: 100px;">
+                <div class="mt-2" style="font-size: 10px;text-align: center;color: white;">پرداخت آنلاین</div>
+              </div>
+            </div>
+
+            <div class="col-12 d-flex justify-content-between">
+
+              <div class="col-4 col-lg-3  d-flex flex-column" style="text-align: center;color: white;">
+                  <p style="font-size: 15px;">با سدمد کالا</p>
+                  <a href="#" style="text-decoration: none;color: white; font-size: 12px;">تماس با سدمد کالا</a>
+                  <a href="#" style="text-decoration: none;color: white; font-size: 12px;">درباره سدمد کالا</a>
+                  <a href="#" style="text-decoration: none;color: white; font-size: 12px;">کار در سدمد کالا</a>
+              </div>
+              <div class="col-4 col-lg-3 d-flex flex-column" style="text-align: center;color: white;">
+                <p style="font-size: 15px;">خدمات مشتریان</p>
+                <a href="#" style="text-decoration: none;color: white; font-size: 12px;">پرسش و پاسخ</a>
+                <a href="#" style="text-decoration: none;color: white; font-size: 12px;">شرایط بازگشت وجه</a>
+                <a href="#" style="text-decoration: none;color: white; font-size: 12px;">گزارش تخلف</a>
+              </div>
+              <div class="col-4 col-lg-3  d-flex flex-column" style="text-align: center;color: white;">
+                <p style="font-size: 15px;">راهنمای خرید از سدمد کالا</p>
+                <a href="#" style="text-decoration: none;color: white; font-size: 12px;">نحوه ثبت سفارش</a>
+                <a href="#" style="text-decoration: none;color: white; font-size: 12px;">رویه ارسال سفارش</a>
+                <a href="#" style="text-decoration: none;color: white; font-size: 12px;"> روش های پرداخت</a>
+              </div>
+            </div>
+            <div class="mx-auto pt-2 pb-2" style="text-align: center;color: white;border-top:1px solid black">
+            <p> هفت روز هفته ، ۲۴ ساعت شبانه‌روز پاسخگوی شما هستیم</p>
+            <p>تلفن: ۰۹۳۶۱۲۳۴۵۶۷۸</p>
+            <p class="mb-2">E-mail : puryabzp@gmail.com</p>
+
+            </div>
+
+
+
+
+
+      </div>
+</div>
