--- a/django-store/core/templates/base/header.html
+++ b/django-store/core/templates/base/header.html
@@ -1,10 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% load static %}
 
-</body>
-</html>
+
+<nav class="navbar navbar-expand-lg navbar-light nav_bar d-flex justify-content-between" style="position: sticky;position: -webkit-sticky;position: -webkit-sticky;
+    position: sticky;
+    top: 0;z-index: 1;">
+
+      <div>
+        <button class="basket" ><i class="fas fa-shopping-basket"></i></button>
+        <span class="m-2">|</span>
+        <button class="login_btn">ورود به حساب کاربری   <i class="fas fa-user"></i></button></div>
+         <div class="d-flex">
+          <div style="margin-top: 20px;">
+            <form>
+              <button class="search_btn"><i class="fas fa-search " style="color: gray;font-size: 10px;text-align: right;"></i></button>
+              <input type="text" class="search_field" placeholder="... جستجو کن ">
+            </form>
+
+
+          </div>
+          <div class="bg-success m-2">
+
+              <img src="{% static 'img/1597738603766.jpeg' %}" style="height: 50px;width: 50px;">
+        </div>
+      </div>
+    </nav>
+
+
+
+
+
+
+    <div class="row w-100 p-0 m-0 cat_div mr-2 mb-1 d-flex justify-content-around">
+      <div class="dropdown mt-2">
+        <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i id="button" class="fa fa-list-alt" aria-hidden="true"></i> دسته بندی ها</button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdowns">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+
+      <div class="dropdown mt-2">
+        <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-store"></i> فروشگاه ها</button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+
+
+      <div class="dropdown mt-2">
+        <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tags"></i> برندها</button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+
+
+      <button class="btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 10px;"><i class="far fa-question-circle"></i> سوالی دارید</button>
+    </div>
