--- a/django-store/core/templates/homepage/home_page.html
+++ b/django-store/core/templates/homepage/home_page.html
@@ -6,51 +6,103 @@
 
 
 
-    <div class="container mt-2 mb-2 h-100 w-100">
-      <div class="row h-100 w-100 p-0 m-0 d-flex justify-content-center">
-        <div class="row col-12 col-sm-12 col-md-12 col-lg-5 p-0 m-0">
-          <div class="col-12 bg-info p-0 m-0" style="height: 180px;border-radius: 15px;">
-            <img style="width: 100%;height: 100%;border-radius: 15px;"  src="{% static 'img/head1.gif' %}">
-          </div>
-          <div class="col-12 bg-dark p-0 m-0" style="height: 180px;border-radius: 15px;">
-            <img style="width: 100%;height: 100%;border-radius: 15px;" src="{% static 'img/head2.gif' %}">
-          </div>
 
 
-        </div>
-        <div id="carouselExampleIndicators" class="carousel slide col-12 col-sm-12 col-md-12 col-lg-6 bg-success" data-ride="carousel" style="height: 360px;border-radius: 20px;">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="..."  alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="..." alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="..." alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
+
+    <!-- first slider -->
+{#    <div class="container mt-2 mb-2 h-100 w-100">#}
+{#      <div class="row h-100 w-100 p-0 m-0 d-flex justify-content-center">#}
+{#        <div class="row col-12 col-sm-12 col-md-12 col-lg-5 p-0 m-0">#}
+{#          <div class="col-12 bg-info p-0 m-0" style="height: 180px;border-radius: 15px;">#}
+{#            <img style="width: 100%;height: 100%;border-radius: 15px;"  src="{% static 'img/head1.gif' %}">#}
+{#          </div>#}
+{#          <div class="col-12 bg-dark p-0 m-0" style="height: 180px;border-radius: 15px;">#}
+{#            <img style="width: 100%;height: 100%;border-radius: 15px;" src="{% static 'img/head2.gif' %}">#}
+{#          </div>#}
+{##}
+{##}
+{#        </div>#}
+{#        <div id="carouselExampleIndicators" class="carousel slide col-12 col-sm-12 col-md-12 col-lg-6 bg-success" data-ride="carousel" style="height: 360px;border-radius: 20px;">#}
+{#          <ol class="carousel-indicators">#}
+{#            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>#}
+{#            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>#}
+{#            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>#}
+{#          </ol>#}
+{#          <div class="carousel-inner">#}
+{#            <div class="carousel-item active">#}
+{#              <img class="d-block w-100" src="..."  alt="First slide">#}
+{#            </div>#}
+{#            <div class="carousel-item">#}
+{#              <img class="d-block w-100" src="..." alt="Second slide">#}
+{#            </div>#}
+{#            <div class="carousel-item">#}
+{#              <img class="d-block w-100" src="..." alt="Third slide">#}
+{#            </div>#}
+{#          </div>#}
+{#          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">#}
+{#            <span class="carousel-control-prev-icon" aria-hidden="true"></span>#}
+{#            <span class="sr-only">Previous</span>#}
+{#          </a>#}
+{#          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">#}
+{#            <span class="carousel-control-next-icon" aria-hidden="true"></span>#}
+{#            <span class="sr-only">Next</span>#}
+{#          </a>#}
+{#        </div>#}
+{#      </div>#}
+{#    </div>#}
     <!-- first slider -->
 
+    <div class="container mt-2 mb-2 h-100 w-100">
+        <div class="row  p-0 m-0">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 row p-0 m-0">
+                <a href="#">
+                    <div class="col-12 p-0 m-0" style="height: 180px;border-radius: 15px;">
+                    <img style="width: 100%;height: 100%;border-radius: 15px;"  src="{% static 'img/head2.gif' %}">
+                    </div>
+                </a>
 
+                <a href="#">
+                    <div class="col-12 p-0 m-0" style="height: 180px;border-radius: 15px;">
+                    <img style="width: 100%;height: 100%;border-radius: 15px;"  src="{% static 'img/head1.gif' %}">
+                    </div>
+                </a>
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-sm-12 col-md-12 col-lg-8 p-0 m-0 " data-ride="carousel" style="height: 360px;border-radius: 20px;">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner p-0 m-0 h-100 w-100">
 
+                    <div class="carousel-item active p-0 m-0 h-100 w-100">
+                        <a href="#">
 
+                             <img class="d-block w-100 h-100" src="{% static 'img/nescafe.jpg' %}"  alt="First slide" style="border-radius: 15px">
+                        </a>
+                    </div>
+                   {% for slide in slide_list %}
+                        <div class="carousel-item p-0 m-0 h-100 w-100">
+                            <a href="#">
+
+                                 <img class="d-block w-100 h-100" src="{{slide.image.url}}"  alt="First slide" style="border-radius: 15px">
+                            </a>
+                        </div>
+                   {% endfor %}
+
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+            </div>
+          </div>
+        </div>
+    </div>
 
 
 
@@ -579,53 +631,19 @@
     <div class="container-fluid mt-2 mb-2 bg-info" style="height: auto;">
       <div class="pt-3 mb-2" style="text-align: center;color: white;"><i class="fas fa-gem"></i> برند های برتر <i class="fas fa-gem"></i></div>
       <div class="row d-flex justify-content-around w-100 h-100 p-0 m-0">
-
-        <div class="col-7 col-sm-4 col-md-3 col-lg-2 mt-2 mb-5" style="border-radius: 15px;" style="height: 90%;border-radius: 15px;background-color: white;">
+    {% for brand in best_brands %}
+            <div class="col-7 col-sm-4 col-md-3 col-lg-2 mt-2 mb-5" style="border-radius: 15px;" style="height: 90%;border-radius: 15px;background-color: white;">
           <a href="#" style="color:black;text-decoration: none;">
             <div class="mx-auto p-2" style="background-color: white;border-radius: 15px;" >
-              <img class="h-80 mx-auto" src="{% static 'img/panasonic.png' %}"  style="border-radius: 15px;width: 100%;" >
-              <div style='text-align:center'><i class="fas fa-medal" style="color: rgb(0, 132, 255);" ></i> پاناسونیک <i style="color: rgb(0, 132, 255);" class="fas fa-medal"></i></div>
+              <img class="h-80 mx-auto" src="{{brand.image.url}}"  style="border-radius: 15px;width: 100%;" >
+              <div style='text-align:center'><i class="fas fa-medal" style="color: rgb(0, 132, 255);" ></i> {{ brand.title }} <i style="color: rgb(0, 132, 255);" class="fas fa-medal"></i></div>
             </div>
 
           </a>
 
         </div>
+    {% endfor %}
 
-
-
-        <div class="col-7 col-sm-4 col-md-3 col-lg-2 mt-2 mb-5" style="border-radius: 15px;" style="height: 90%;border-radius: 15px;background-color: white;">
-          <a href="#" style="color:black;text-decoration: none;">
-            <div class="mx-auto p-2" style="background-color: white;border-radius: 15px;" >
-              <img class="h-80 mx-auto" src="{% static 'img/x-vision.png' %}" style="border-radius: 15px;width: 100%;" >
-              <div style='text-align:center'><i class="fas fa-medal" style="color: rgb(0, 132, 255);" ></i> پاناسونیک <i style="color: rgb(0, 132, 255);" class="fas fa-medal"></i></div>
-            </div>
-
-          </a>
-
-        </div>
-
-
-
-        <div class="col-7 col-sm-4 col-md-3 col-lg-2 mt-2 mb-5" style="border-radius: 15px;" style="height: 90%;border-radius: 15px;background-color: white;">
-          <a href="#" style="color:black;text-decoration: none;">
-            <div class="mx-auto p-2" style="background-color: white;border-radius: 15px;" >
-              <img class="h-80 mx-auto" src="{% static 'img/pars.png' %}" style="border-radius: 15px;width: 100%;" >
-              <div style='text-align:center'><i class="fas fa-medal" style="color: rgb(0, 132, 255);" ></i> پاناسونیک <i style="color: rgb(0, 132, 255);" class="fas fa-medal"></i></div>
-            </div>
-
-          </a>
-
-        </div>
-        <div class="col-7 col-sm-4 col-md-3 col-lg-2 mt-2 mb-5" style="border-radius: 15px;" style="height: 90%;border-radius: 15px;background-color: white;">
-          <a href="#" style="color:black;text-decoration: none;">
-            <div class="mx-auto p-2" style="background-color: white;border-radius: 15px;" >
-              <img class="h-80 mx-auto" src="{% static 'img/huawei.jpg' %}"  style="border-radius: 15px;width: 100%;" >
-              <div style='text-align:center'><i class="fas fa-medal" style="color: rgb(0, 132, 255);" ></i> پاناسونیک <i style="color: rgb(0, 132, 255);" class="fas fa-medal"></i></div>
-            </div>
-
-          </a>
-
-        </div>
 
       </div>
     </div>
