--- a/django-store/core/templates/base/base.html
+++ b/django-store/core/templates/base/base.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
 <link rel="stylesheet" href="{% static 'css/all.css' %}" >
-<link rel="stylesheet" href="{% static 'css/styleTest.css' %}" >
 <link rel="stylesheet" href="{% static 'css/styles.css' %}" >
+{% block selfstyle %}{% endblock %}
+<link rel="stylesheet" href="{% static 'css/styleTest.css' %}" >
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
