--- a/django-store/core/templates/base/header.html
+++ b/django-store/core/templates/base/header.html
@@ -41,7 +41,11 @@
         <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i id="button" class="fa fa-list-alt" aria-hidden="true"></i> دسته بندی ها</button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdowns">
             {% for category in categories %}
-                 <a class="dropdown-item" href="#">{{ category.category_name }}</a>
+                {% if category.parent is null %}
+                 <a class="dropdown-item" href="#" style="font-weight: bold">{{ category.category_name }}</a>
+
+                {% endif %}
+{#                 <a class="dropdown-item" href="#">{{ category.category_name }}</a>#}
             {% endfor %}
         </div>
       </div>
