--- a/django-store/core/templates/base/header.html
+++ b/django-store/core/templates/base/header.html
@@ -26,7 +26,9 @@
           </div>
           <div class="m-2">
 
-              <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/3957.png" style="height: 50px;width: 50px;">
+              <a href="{% url 'home' %}">
+                  <img src="https://s2.coinmarketcap.com/static/img/coins/200x200/3957.png" style="height: 50px;width: 50px;">
+              </a>
         </div>
       </div>
     </nav>
@@ -41,10 +43,8 @@
         <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i id="button" class="fa fa-list-alt" aria-hidden="true"></i> دسته بندی ها</button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdowns">
             {% for category in categories %}
-                {% if category.parent is null %}
-                 <a class="dropdown-item" href="#" style="font-weight: bold">{{ category.category_name }}</a>
+                 <a class="dropdown-item" href="{% url 'categories_product' category.slug%}" style="font-weight: bold">{{ category.category_name }}</a>
 
-                {% endif %}
 {#                 <a class="dropdown-item" href="#">{{ category.category_name }}</a>#}
             {% endfor %}
         </div>
@@ -54,7 +54,7 @@
         <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-store"></i> فروشگاه ها</button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           {% for shop in shops %}
-                 <a class="dropdown-item" href="#">{{ shop.name }}</a>
+                 <a class="dropdown-item" href="{% url 'shops_product' shop.slug%}">{{ shop.name }}</a>
             {% endfor %}
         </div>
       </div>
@@ -64,7 +64,7 @@
         <button class="btn buttons dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tags"></i> برندها</button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           {% for brand in brands %}
-                 <a class="dropdown-item" href="#">{{ brand.brand_name }}</a>
+                 <a class="dropdown-item" href="{% url 'brands_product' brand.slug%}">{{ brand.brand_name }}</a>
             {% endfor %}
         </div>
       </div>
