--- a/django-store/core/templates/base/base.html
+++ b/django-store/core/templates/base/base.html
@@ -21,7 +21,7 @@
 {% block footer %}
 {% include 'base/footer.html' %}
 {% endblock %}
-<script src="{%  static 'js/jquery-3.5.1.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="{%  static 'js/bootstrap.min.js' %}"></script>
 <script src="{%  static 'js/popper.min.js' %}"></script>
 {% block javascript %}{% endblock %}
