--- a/django-store/core/templates/base/base.html
+++ b/django-store/core/templates/base/base.html
@@ -1,6 +1,8 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+<meta http-equiv="" content="1">
+{#<meta http-equiv="refresh" content="0.5">#}
 <head>
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
 <link rel="stylesheet" href="{% static 'css/all.css' %}" >
