--- a/django-store/core/templates/homepage/home_page.html
+++ b/django-store/core/templates/homepage/home_page.html
@@ -114,71 +114,7 @@
     <!-- for off -->
     <div class="container-fluid bg-danger">
       <div class="row d-flex justify-content-around">
-        <div class="col-12 mb-4 mt-4" style="text-align: center;color: white;"><i class="fa fa-percent" aria-hidden="true"></i>   پیشنهاد های شگفت انگیز  <i class="fa fa-percent" aria-hidden="true"></i></div>
-        <!-- <div class="col-xs-8 col-sm-6 col-md-4 col-lg-2 m-0 p-2" style="height: 250px;background-color: white;border-radius: 15px;">
-
-
-          <a class="w-100 h-100 " href="#">
-            <img src="1597738603766.jpeg" style="width: 100%; height: 60%;border-radius: 15px;">
-          </a>
-          <div class="top-right" style=" position: absolute;top: 150pxpx;right: 16px;">اسم محصول</div>
-          <div style="  position: absolute;bottom: 30px;left: 16px;">
-            <span class="badge badge-danger mr-1">%۲۰</span>
-            <span style="color: grey;text-decoration: line-through;">۸۵,۰۰۰</span>
-          </div>
-          <div class="top-right" style=" position: absolute;top:220px;left:30px;"><span>۵۵,۰۰۰</span></div>
-
-
-
-        </div>
-        <div class="col-xs-8 col-sm-6 col-md-4 col-lg-2 m-0 p-2" style="height: 250px;background-color: white;border-radius: 15px;">
-
-
-          <a class="w-100 h-100 " href="#">
-            <img src="1597738603766.jpeg" style="width: 100%; height: 60%;border-radius: 15px;">
-          </a>
-          <div class="top-right" style=" position: absolute;top: 150pxpx;right: 16px;">اسم محصول</div>
-          <div style="  position: absolute;bottom: 30px;left: 16px;">
-            <span class="badge badge-danger mr-1">%۲۰</span>
-            <span style="color: grey;text-decoration: line-through;">۸۵,۰۰۰</span>
-          </div>
-          <div class="top-right" style=" position: absolute;top:220px;left:30px;"><span>۵۵,۰۰۰</span></div>
-
-
-
-        </div>
-        <div class="col-xs-8 col-sm-6 col-md-4 col-lg-2 m-0 p-2" style="height: 250px;background-color: white;border-radius: 15px;">
-
-
-          <a class="w-100 h-100 " href="#">
-            <img src="1597738603766.jpeg" style="width: 100%; height: 60%;border-radius: 15px;">
-          </a>
-          <div class="top-right" style=" position: absolute;top: 150pxpx;right: 16px;">اسم محصول</div>
-          <div style="  position: absolute;bottom: 30px;left: 16px;">
-            <span class="badge badge-danger mr-1">%۲۰</span>
-            <span style="color: grey;text-decoration: line-through;">۸۵,۰۰۰</span>
-          </div>
-          <div class="top-right" style=" position: absolute;top:220px;left:30px;"><span>۵۵,۰۰۰</span></div>
-
-
-
-        </div>
-        <div class="col-xs-8 col-sm-6 col-md-4 col-lg-2 m-0 p-2" style="height: 250px;background-color: white;border-radius: 15px;">
-
-
-          <a class="w-100 h-100 " href="#">
-            <img src="1597738603766.jpeg" style="width: 100%; height: 60%;border-radius: 15px;">
-          </a>
-          <div class="top-right" style=" position: absolute;top: 150pxpx;right: 16px;">اسم محصول</div>
-          <div style="  position: absolute;bottom: 30px;left: 16px;">
-            <span class="badge badge-danger mr-1">%۲۰</span>
-            <span style="color: grey;text-decoration: line-through;">۸۵,۰۰۰</span>
-          </div>
-          <div class="top-right" style=" position: absolute;top:220px;left:30px;"><span>۵۵,۰۰۰</span></div>
-
-
-
-        </div> -->
+        <div class="col-12 mb-4 mt-4" style="text-align: center;color: white;font-size: 23px"><i class="fa fa-percent" aria-hidden="true"></i>   پیشنهاد های شگفت انگیز  <i class="fa fa-percent" aria-hidden="true"></i></div>
         <div class="col-12 row d-flex justify-content-around">
 
 
@@ -205,7 +141,7 @@
 
         </div>
         <div class="col-12 mb-4 mt-4" style="text-align: center;">
-          <a href="#" style="color: white;text-decoration: none;border: 1px solid white;padding: 7px;font-size: 12px;border-radius: 3px;"> مشاهده همه </a>
+          <a href="#" style="color: white;text-decoration: none;border: 1px solid white;padding: 7px;font-size: 15px;border-radius: 3px;"> مشاهده همه </a>
         </div>
 
       </div>
@@ -310,13 +246,13 @@
 
 
     <div class="container-fluid mt-2 mb-2 bg-warning" style="height: auto;">
-      <div class="pt-3 mb-3" style="text-align: center;">بیشتر مدیر باش</div>
+      <div class="pt-3 mb-3" style="text-align: center;font-size: 23px">بیشتر مدیر باش</div>
       <div class="row d-flex justify-content-around w-100 h-100 p-0 m-0">
 
           <div class="col-7 col-sm-7 col-md-7 col-lg-2 mt-2 mb-5 bg-light m-0 p-0" style="border-radius: 15px;" style="height: 100%;border-radius: 15px;">
             <a href="#" style="text-decoration: none;color: black;">
               <img class="w-100 h-80" style="border-radius: 15px;" src="{% static 'img/report2.jpg' %}" >
-              <div class="mb-2" style="text-align: center;font-size: 13px;">گزارش عملکرد کاربری</div>
+              <div class="mb-2" style="text-align: center;font-size: 17px;">گزارش عملکرد کاربری</div>
 
             </a>
 
@@ -325,7 +261,7 @@
           <div class="col-7 col-sm-7 col-md-7 col-lg-2 mt-2 mb-5 bg-light m-0 p-0" style="border-radius: 15px;" style="height: 100%;border-radius: 15px;">
             <a href="#" style="text-decoration: none;color: black;">
               <img class="w-100 h-80 p-2" style="border-radius: 15px;"  src="{% static 'img/customers.png' %}">
-              <div class="mb-2" style="text-align: center;font-size: 13px;">باشگاه مشتریان</div>
+              <div class="mb-2" style="text-align: center;font-size: 17px;">باشگاه مشتریان</div>
 
             </a>
 
@@ -334,7 +270,7 @@
           <div class="col-7 col-sm-7 col-md-7 col-lg-2 mt-2 mb-5 bg-light m-0 p-0" style="border-radius: 15px;" style="height: 100%;border-radius: 15px;">
             <a href="#" style="text-decoration: none;color: black;">
               <img class="w-100 h-80" style="border-radius: 15px;" src="{% static 'img/hamkari.png' %}">
-              <div class="mb-2" style="text-align: center;font-size: 13px;">همکارم شو  </div>
+              <div class="mb-2" style="text-align: center;font-size: 17px;">همکارم شو  </div>
 
             </a>
 
@@ -520,7 +456,7 @@
 
 
     <div class="container-fluid mt-2 mb-2 bg-info" style="height: auto;">
-      <div class="pt-3 mb-2" style="text-align: center;color: white;"><i class="fas fa-gem"></i> برند های برتر <i class="fas fa-gem"></i></div>
+      <div class="pt-3 mb-2" style="text-align: center;color: white;font-size: 23px"><i class="fas fa-gem"></i> برند های برتر <i class="fas fa-gem"></i></div>
       <div class="row d-flex justify-content-around w-100 h-100 p-0 m-0">
     {% for brand in best_brands %}
             <div class="col-7 col-sm-4 col-md-3 col-lg-2 mt-2 mb-5" style="border-radius: 15px;" style="height: 90%;border-radius: 15px;background-color: white;">
