--- a/django-store/core/templates/homepage/single_product.html
+++ b/django-store/core/templates/homepage/single_product.html
@@ -52,11 +52,11 @@
                     <div class="p-3 d-flex justify-content-around" dir="rtl">
                         <div>
                             <span style="font-size: 13px;"><i style="color: rgb(241, 185, 41);" class="fas fa-star"></i> امتیاز : </span>
-                            <span style="font-size: 13px;">{{ object.product_scores }} </span>
+                            <span style="font-size: 13px;" id="score_detail">{{object.like_count}} </span>
                         </div>
                         <div>
                             <span style="font-size: 13px;">تعداد دیدگاه کاربران : </span>
-                            <span style="font-size: 13px;">{{ product_comments.count }} </span>
+                            <span style="font-size: 13px;" id="comment_count">{{ product_comments.count }} </span>
                         </div>
 
                     </div>
@@ -93,9 +93,9 @@
                                 </div>
                             </div>
                             <div class="d-flex justify-content-around mt-4">
-                                <span style="color: rgba(247, 2, 2, 0.87);font-size: 18px;"><i class="fas fa-heart"></i></span>
-                                <span style="color: goldenrod;font-size: 18px;"><i class="fas fa-bell"></i></span>
-                                <span><i class="fas fa-share-alt"></i></span>
+                                <button class="btn" style="color: rgba(247, 2, 2, 0.87);font-size: 18px;background-color: transparent;border: none" onclick="add_score({{ object.id }})"><i class="fas fa-heart"></i></button>
+                                <button class="btn" style="color: goldenrod;font-size: 18px;background-color: transparent;border: none"><i class="fas fa-bell"></i></button>
+                                <button class="btn" style="font-size: 18px;background-color: transparent;border: none"><i class="fas fa-share-alt"></i></button>
 
                             </div>
 
@@ -231,6 +231,30 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 p-2 mb-1 bg-light" style="border-radius:15px 15px 0 0;text-align: right;" dir="rtl">ارسال نظر </div>
+            <div class="col-12 bg-light mb-3" style="border-radius:0 0 15px 15px">
+
+
+                        {% if request.user.is_authenticated %}
+                          <div class="d-flex flex-column mt-3 mb-3">
+                           <textarea class="mt-3 p-2 m-auto" rows="8" style="direction: rtl; height: auto; width:50%;border-radius: 15px" id="content"></textarea>
+                            <button class="btn btn-primary mt-2" style="width: 50%;margin: auto" onclick="create_comment({{ object.id }},$('#content').val())">ارسال نظر</button>
+                          </div>
+
+
+
+                        {% else %}
+                            <div class="d-flex flex-column mt-3 mb-3">
+                                <textarea class="mt-3 p-2 m-auto" rows="8" style="height: auto; width:50%;border-radius: 15px;text-align: center"
+                                          disabled>جهت ارسال دیدگاه خود بایستی وارد حساب کاربری خود شوید</textarea>
+                                <br>
+                                <a href="{% url 'login' %}" style="text-align: center">ورود به حساب کاربری</a>
+                            </div>
+                        {% endif %}
+
+
+
+            </div>
         </div>
     </div>
 
@@ -247,12 +271,64 @@
                 url: "{% url 'add_to_basket' %}",
                 data: data,
                 success: function (response) {
-                    const data = JSON.parse(response)
-                    console.log(data)
+                    location.reload(true);
 
 
                 }
             });
+        }
+
+        function  add_score(id){
+
+            const data = JSON.stringify({product_id: id})
+
+            $.ajax({
+                type: 'post',
+                url: "{% url 'add_score' %}",
+                data: data,
+                success: function (response) {
+                    const data = JSON.parse(response)
+                    $('#score_detail').text(data['like_count'])
+
+
+
+                }
+            });
+
+        }
+
+
+        function create_comment(productId, content) {
+            if ($('#content').val()!==''){
+                const data = JSON.stringify({product_id: productId, content: content})
+
+            $.ajax({
+                type: 'post',
+                url: "{% url 'comment_create' %}",
+                data: data,
+                success: function (response) {
+                    const data = JSON.parse(response)
+                    console.log(data)
+                    $('#comment_count').text(data['comment_count'])
+                    $('#nav-comments').prepend(`<div class="mb-4">
+                                    <!-- <img src="la.jpg" style="border-radius: 50%; width: 30px; height: 30px;">  -->
+                                    <a href="#"
+                                       style="display: inline;color: #4e555b;text-decoration: none">${data['author']}</a>
+                                    <span>گفته که :</span>
+                                    <p>${data['content']}</p>
+
+                                </div>`)
+                    document.getElementById("content").value = "";
+
+
+
+
+
+                }
+            });
+
+            }
+
         }
 
     </script>
